<resources>
    <string name="app_name">InstagramClone</string>

    <!-- Labels -->
    <string name="label_user_profile">User Profile</string>

    <!-- descriptions -->
    <string name="iv_image_profile">image profile</string>
    <string name="ic_cross">Icon cross</string>
    <string name="ib_like">Icon like</string>
    <string name="iv_verified">Icon verified</string>
    <string name="iv_photo">Icon photo</string>
    <string name="ib_setting">Icon setting</string>
    <string name="iv_log_out">Icon log out</string>

    <!-- login -->
    <string name="description_ic_instagram">Icon Instagram</string>
    <string name="btn_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_create_account">Create new account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Bottom bar -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>

    <!-- Search -->
    <string name="hint_search">Search</string>

    <!-- Profile -->
    <string name="description_iv_post">Image post</string>
    <string name="btn_posts">%d\nPosts</string>
    <string name="btn_followers">%d\nFollowers</string>
    <string name="btn_followings">%d\nFollowings</string>
    <string name="full_name_format">%1$s %2$s</string>
    <string name="btn_edit_profile">Edit profile</string>
    <string name="btn_share_profile">Share profile</string>
    <string name="btn_follow">Follow</string>
    <string name="btn_following">Following</string>
    <string name="btn_message">Message</string>
    <string name="tv_no_posts">No post yet</string>

    <!-- Post detail -->
    <string name="description_ic_back">Image back</string>
    <string name="description_btn_iv_profile">Image profile</string>
    <string name="description_ic_verified">Icon verified</string>
    <string name="description_ic_like">Icon like</string>
    <string name="description_ic_comment">Icon comment</string>
    <string name="description_ic_save">Icon save</string>
    <string name="btn_likes">%1$d likes</string>
    <string name="btn_comments">View all %1$d comments</string>

    <!-- Comment -->
    <string name="tv_comment">Comments</string>
    <string name="tv_no_comments">No comments yet</string>
    <string name="tv_start_conversation">Start the conversation.</string>
    <string name="hint_comment">Add a comment for %1$s</string>
    <string name="description_ib_send_comment">Icon send</string>

    <!-- Follow -->
    <string name="tv_no_users">No users found.</string>

    <!-- Settings -->
    <string name="tv_interactions">Interactions</string>
    <string name="tv_saved">Saved</string>
    <string name="tv_like">Likes</string>
    <string name="tv_dark_mode">Dark Mode</string>
    <string name="tv_accessibility_translations">Accessibility and translations</string>
    <string name="tv_login">Login</string>
    <string name="tv_log_out">Log out</string>

    <!-- Modal -->
    <string name="tv_title">Log out of\nyour account?</string>
    <string name="btn_log_out">Log Out</string>
    <string name="btn_cancel">Cancel</string>

</resources>