<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="500dp"
    tools:context=".ui.comment.CommentListDialogFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_comment"
        android:textStyle="bold"
        android:textSize="21sp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/llEmptyComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvNoComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="21sp"
            android:text="@string/tv_no_comments"/>

        <TextView
            android:id="@+id/tvStartConversation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tv_start_conversation"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvComment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/clFooter"
        app:layout_constraintTop_toBottomOf="@+id/tvComment"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clFooter"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/ivProfile"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/ic_user"
            android:background="@drawable/bg_image_profile"
            android:scaleType="centerCrop"
            android:contentDescription="@string/iv_image_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <EditText
            android:id="@+id/etComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="7dp"
            android:hint="@string/hint_comment"
            android:background="@android:color/transparent"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@id/ivProfile"
            app:layout_constraintEnd_toStartOf="@+id/btnSend"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_send"
            android:contentDescription="@string/description_ib_send_comment"
            android:background="@drawable/bg_btn_send"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pbComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>