<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="5dp"
    android:id="@+id/parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/ivProfile"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/img_profile_default"
        android:background="@drawable/bg_image_profile"
        android:scaleType="centerCrop"
        android:contentDescription="@string/iv_image_profile"
        android:clipToOutline="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivProfile">

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@color/gray"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddFollow"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:visibility="gone"
        android:layout_marginEnd="5dp"
        android:background="@drawable/bg_btn_follow"
        android:text="@string/btn_follow"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDeleteFollow"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:visibility="gone"
        android:layout_marginEnd="5dp"
        android:background="@drawable/bg_btn_following_message"
        android:text="@string/btn_following"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>