<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/ivProfile"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/ic_user"
        android:background="@drawable/bg_image_profile"
        android:scaleType="centerCrop"
        android:contentDescription="@string/iv_image_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivProfile"/>

    <ImageView
        android:id="@+id/ivVerified"
        android:layout_width="15sp"
        android:layout_height="15sp"
        android:visibility="gone"
        android:src="@drawable/ic_verified"
        android:contentDescription="@string/iv_verified"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/tvUserName"
        app:layout_constraintTop_toTopOf="@id/tvUserName"
        app:layout_constraintBottom_toBottomOf="@id/tvUserName"/>

    <TextView
        android:id="@+id/tvComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginHorizontal="5dp"
        android:maxLines="8"
        android:ellipsize="end"
        app:layout_constraintEnd_toStartOf="@+id/btnLike"
        app:layout_constraintStart_toEndOf="@+id/ivProfile"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <ImageButton
        android:id="@+id/btnLike"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="9dp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        android:src="@drawable/ic_like"
        android:contentDescription="@string/ib_like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/guideline"/>

    <TextView
        android:id="@+id/tvLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnLike"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/guideline"/>

</androidx.constraintlayout.widget.ConstraintLayout>